[project]
name = "huge-catering-wechat"
version = "0.1.0"
description = "Automate article, cover image, HTML layout, and WeChat Official Account draft creation for 胡哥说餐饮."
requires-python = ">=3.10"
dependencies = [
  "flask>=3.0.3",
  "jinja2>=3.1.4",
  "pillow>=10.4.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.3",
]

[project.scripts]
huge-wechat = "huge_catering.cli:main"
huge-web = "huge_catering.webapp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
